# textum-ocr.github.io

./: .gitignore  README.md  docs-requirements.txt  index.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md  troubleshooting.md
docs/development/: architecture.md  building.md  model.md  models.md  structure.md  tricks.md
docs/getting-started/: gallery.md  installation.md  quick-start.md
docs/resources/: extra.css
docs/user-guide/: creating-jobs.md  export-options.md  job-control.md  overview.md  review-interface.md  settings.md
