[project]
name = "textum-docs"
version = "0.1.0"
description = "Documentation for Textum OCR application"
requires-python = ">=3.8"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

